System generated commit, after creating a new branch: test

--- a/application.json
+++ b/application.json
@@ -8,7 +8,8 @@
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
-  "color": "#F5D1D1",
+  "color": "#C7F3E3",
+  "icon": "bag",
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
